Review changes and test case failing